@@ -4,10 +4,32 @@ i18n with external links
 ========================
 .. #1044 external-links-dont-work-in-localized-html
 
-* External link to Python_.
-* Internal link to `i18n with external links`_.
-* Inline link by `Sphinx <http://sphinx-doc.org>`_.
-* Unnamed link__.
+External link to Python_.
+
+Internal link to `i18n with external links`_.
+
+Inline link by `Sphinx <http://sphinx-doc.org>`_.
+
+Unnamed link__.
 
 .. _Python: http://python.org
+.. __: http://google.com
+
+
+link target swapped translation
+================================
+
+link to external1_ and external2_.
+
+link to `Sphinx <http://sphinx-doc.org>`_ and `Python <http://python.org>`_.
+
+.. _external1: http://example.com/external1
+.. _external2: http://example.com/external2
+
+
+Multiple references in the same line
+=====================================
+
+Link to `Sphinx <http://sphinx-doc.org>`_, `Python <http://python.org>`_, Python_, Unnamed__ and `i18n with external links`_.
+
 .. __: http://google.com
